ipc/ipdl/test/ipdl/ok/content.ipdl
include protocol compositor;
include protocol jetpack;
include protocol media;
include protocol plugin;

sync protocol content {
    parent spawns compositor as parent;
    parent spawns jetpack;
    child spawns plugin;
    child opens media;

child:
    __delete__();

state DEAD:
    send __delete__;
};
