ipc/ipdl/test/ipdl/error/subprotocolSpawns.ipdl
include protocol spawnsSubprotocol;

protocol subprotocolSpawns {
    parent spawns spawnsSubprotocol;

    manager spawnsSubprotocol;

child: __delete__();
state DEAD: send __delete__;
};
